--- a/healthRanger/Base.lproj/Main.storyboard
+++ b/healthRanger/Base.lproj/Main.storyboard
@@ -743,7 +743,6 @@
                                 </state>
                                 <connections>
                                     <action selector="redoB:" destination="JA3-iq-RzP" eventType="touchUpInside" id="8If-3g-5tg"/>
-                                    <action selector="submitTap:" destination="oR5-GT-C5D" eventType="touchUpInside" id="aDP-YY-dcB"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -765,6 +764,7 @@
         <!--Heart Rate View Controller-->
         <scene sceneID="OFr-bD-0WW">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MhX-gT-UO4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="oR5-GT-C5D" customClass="HeartRateViewController" customModule="healthRanger" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Faq-Z7-2eX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
@@ -795,6 +795,10 @@
                                 <color key="textColor" red="0.81176471709999998" green="0.6784313917" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="865969" translatesAutoresizingMaskIntoConstraints="NO" id="Fd2-cN-HSs">
+                                <rect key="frame" x="327" y="50" width="73" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vf6-Lh-SUW">
                                 <rect key="frame" x="129" y="421" width="155" height="54"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -807,10 +811,6 @@
                                     <action selector="submitTap:" destination="oR5-GT-C5D" eventType="touchUpInside" id="ZpR-Rk-v5A"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="865969" translatesAutoresizingMaskIntoConstraints="NO" id="Fd2-cN-HSs">
-                                <rect key="frame" x="327" y="50" width="73" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="object-hat-ranger" translatesAutoresizingMaskIntoConstraints="NO" id="dmH-9i-kFB">
                                 <rect key="frame" x="333" y="39" width="45" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -823,7 +823,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Health Recommendation" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q7t-BT-kR6">
-                                <rect key="frame" x="38" y="334" width="356" height="302"/>
+                                <rect key="frame" x="38" y="318" width="356" height="302"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.18823529780000001" green="0.31372550129999999" blue="0.4196078479" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -847,8 +847,7 @@
                                     <color key="titleColor" red="0.18823529780000001" green="0.31372550129999999" blue="0.4196078479" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <action selector="redo1:" destination="oR5-GT-C5D" eventType="touchUpInside" id="kpP-b5-YXu"/>
-                                    <action selector="submitTap:" destination="oR5-GT-C5D" eventType="touchUpInside" id="TzK-qn-Tby"/>
+                                    <action selector="redoTapped:" destination="oR5-GT-C5D" eventType="touchUpInside" id="oct-zO-wtP"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -858,11 +857,10 @@
                     <navigationItem key="navigationItem" id="pXZ-lb-TAT"/>
                     <connections>
                         <outlet property="heartrateTextField" destination="W3R-vm-lzW" id="qnE-F5-fCF"/>
-                        <outlet property="output2Label" destination="Q7t-BT-kR6" id="SH0-0W-sx0"/>
-                        <outlet property="outputLabel" destination="dA7-n5-L9R" id="5Mc-Ed-fJj"/>
+                        <outlet property="output2Label" destination="Q7t-BT-kR6" id="u6j-uc-mB5"/>
+                        <outlet property="outputLabel" destination="dA7-n5-L9R" id="sNI-CU-hBA"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MhX-gT-UO4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1371.0144927536232" y="924.77678571428567"/>
         </scene>
@@ -872,7 +870,7 @@
         <segue reference="XiG-U5-222"/>
         <segue reference="jYi-M5-cTi"/>
         <segue reference="hbP-oh-lMO"/>
-        <segue reference="sUs-dq-7IQ"/>
+        <segue reference="N5V-6m-aV0"/>
         <segue reference="OPw-et-NdL"/>
         <segue reference="fYc-55-Tna"/>
     </inferredMetricsTieBreakers>
